# author-contrib

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  TODO.txt  package-lock.json  tailwind.css
assets/: tailwind.css
assets/styling/: main.css
deployment/: Dockerfile  docker-compose.yml
deployment/nginx/: default.conf
src/: app.rs  assets.rs  env.rs  main.rs  router.rs  server.rs
src/backend/: analytics.rs
src/components/: accordion.rs  author_row.rs  author_table.rs  credit_description.rs  credit_roles.rs  google_analytics.rs  head.rs  mod.rs  tooltip.rs
src/models/: author.rs  credit_format.rs  grouping_type.rs  mod.rs  roles.rs
src/views/: home.rs  mod.rs  not_found.rs
