[package]
name = "credit"
version = "0.1.0"
authors = ["Sergey Lazarev <lasest1999@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-free-icons = { version = "0.9.0", features = [
    "bootstrap",
    "font-awesome-brands",
] }
strum = "0.27.1"
strum_macros = "0.27.1"
axum = { version = "0.7", optional = true }
tokio = { version = "1.44.1", optional = true, features = ["full"] }
time = { version = "0.3.39", optional = true }
simple_logger = "5.0.0"
log = "0.4.27"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:axum", "dep:tokio", "dep:time"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
